--- a/src/app/components/skills-bar/skills-bar.component.scss
+++ b/src/app/components/skills-bar/skills-bar.component.scss
@@ -7,7 +7,7 @@
     max-width: 1280px;
     margin: 10px auto 0;
     color: #fff;
-    button[mat-button] {
+    button {
       margin: 4px;
       line-height: 20px;
       min-height: 20px;
