--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,15 +1,15 @@
 <div id="about">
   <section id="profile">
     <div class="clearfix">
-      <img src="img/avatar.jpg" alt="Chosen image representation for Lawliet" class="profile-photo">
+      <img src="/assets/img/avatar.png" alt="Chosen image representation for Lawliet" class="profile-photo">
       <h1>Lawliet</h1>
       <p>Applied Physics BS, Tenacious Problem Solver, Full Stack Web Developer </p>
     </div>
     <div class="buttons text-center">
-      <button mat-button (click)="link('https://github.com/lawlheart')" class="mat-primary mat-raised"><i class="fa fa-github"></i> Github</button>
-      <button mat-button (click)="link('https://www.linkedin.com/in/lawlheart')" class="mat-primary mat-raised"><i class="fa fa-linkedin"></i> LinkedIn</button>
-      <button mat-button (click)="link('https://twitter.com/lawlheart')" class="mat-primary mat-raised" ><i class="fa fa-twitter"></i> Twitter</button>
-      <button mat-button (click)="link('http://freecodecamp.com/lawlheart')" class="mat-primary mat-raised"><i class="fa fa-free-code-camp"></i> FreeCodeCamp</button>
+      <button (click)="link('https://github.com/lawlheart')"><i class="fa fa-github"></i> Github</button>
+      <button (click)="link('https://www.linkedin.com/in/lawlheart')"><i class="fa fa-linkedin"></i> LinkedIn</button>
+      <button (click)="link('https://twitter.com/lawlheart')"><i class="fa fa-twitter"></i> Twitter</button>
+      <button (click)="link('http://freecodecamp.com/lawlheart')"><i class="fa fa-free-code-camp"></i> FreeCodeCamp</button>
     </div>
   </section>
   <section id="education" class="text-center green">
