--- a/src/app/components/social-links/social-links.component.scss
+++ b/src/app/components/social-links/social-links.component.scss
@@ -12,7 +12,7 @@ footer {
     border-radius: 50%;
     margin-right:10px;
     display: inline-block;
-    background: url('/../../img/sprites.png') no-repeat;
+    background: url('/assets/img/sprites.png') no-repeat;
     background-size: 200px 40px;
     &.git {
       background-position: 0 0;
