--- a/src/app/pages/algorithms/algorithms.component.html
+++ b/src/app/pages/algorithms/algorithms.component.html
@@ -1,7 +1,7 @@
 <div id="code">
-  <div class="snippet" *ngFor="let snippet of snippets | async">
+  <div class="snippet" *ngFor="let snippet of snippets">
     <h3><span [class]="'skill skill-' + snippet.language.toLowerCase()">{{snippet.language}}</span> {{snippet.name}}</h3>
     <p>{{snippet.description}}</p>
-    <pre #code><code [innerHTML]="snippet.code" class="highlight" highlight-js-content=".highlight"></code></pre>
+    <pre #code><code [innerHTML]="snippet.code"></code></pre>
   </div>
 </div>
