--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -2,5 +2,5 @@
 
 <div class="portfolio clearfix" id="portfolio">
   <portfolio-card [project]="project" (skillFilterEvent)="filterSkills($event)"
-                  *ngFor="let project of (projects | async) | skillsFilter:projectFilter"></portfolio-card>
+                  *ngFor="let project of projects | skillsFilter:projectFilter"></portfolio-card>
 </div>
