--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,36 @@ ul {
   }
 }
 
+button {
+  border: 0;
+  border-radius: 0;
+  font-size: 16px;
+  text-transform: none;
+}
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  @media (min-width: $screen-small) {
+    width: 750px;
+  }
+  @media (min-width: $screen-medium) {
+    width: 970px;
+  }
+  @media (min-width: $screen-large) {
+    width: 1170px;
+  }
+}
+.text-center {
+  text-align: center;
+}
+.green {
+  background-color: #1B5E20;
+}
+
+#portfolio {
+  padding-top:20px;
+  @include flexy();
+}
+
