--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -31,8 +31,8 @@
       <li><h1><i class="fa fa-gamepad"></i></h1>Games</li>
       <li><h1><i class="fa fa-tree"></i></h1>Camping</li>
       <li><h1><i class="fa fa-code"></i></h1>Code</li>
-      <li><h1><i class="fa fa-rebel"></i></h1>SciFi</li>
-      <li><h1><i class="fa fa-cutlery"></i></h1>Cooking</li>
+      <li><h1><i class="fa fa-robot"></i></h1>SciFi</li>
+      <li><h1><i class="fa fa-utensils"></i></h1>Cooking</li>
       <li><h1><i class="fa fa-star"></i></h1>Astronomy</li>
     </ul>
   </section>
