--- a/src/app/components/social-links/social-links.component.html
+++ b/src/app/components/social-links/social-links.component.html
@@ -3,5 +3,5 @@
   <a href="https://twitter.com/lawlheart" target="_blank"><div class="social-icon twitter"></div></a>
   <a href="https://www.linkedin.com/in/lawlheart" target="_blank"><div class="social-icon linkedin"></div></a>
   <a href="http://freecodecamp.com/lawlheart" target="_blank"><div class="social-icon fcc"></div></a>
-  <p>&copy; 2017 Lawliet.</p>
+  <p>&copy; 2017-2020 Lawliet.</p>
 </footer>
