--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,8 @@ button {
   border-radius: 0;
   font-size: 16px;
   text-transform: none;
+  background-color: $primary-color;
+
 }
 .container {
   padding-right: 15px;
