--- a/src/app/pages/algorithms/algorithms.component.scss
+++ b/src/app/pages/algorithms/algorithms.component.scss
@@ -10,7 +10,7 @@
     pre {
       margin: 10px;
       padding: 10px;
-      background-color: lighten($bg-color, 60%);
+      background-color: #00A9A9;
     }
   }
 
